# EfficientUICoder

./: README.md  pyproject.toml
Design2Code/: requirements.txt
Design2Code/Design2Code/metrics/: multi_processing_eval.py  ocr_free_utils.py  screenshot_single.py  sim.py  study.py  visual_score.py
dataset/webcode2m/: 0.html  1.html  10.html  11.html  12.html  13.html  14.html  15.html  16.html  17.html  18.html  19.html  2.html  20.html  21.html  22.html  23.html  24.html  25.html  26.html  27.html  28.html  29.html  3.html  30.html  31.html  32.html  33.html  34.html  35.html  36.html  37.html  38.html  39.html  4.html  40.html  41.html  42.html  43.html  44.html  (+60 more)
efficient_uicoder/: convert.py
efficient_uicoder/LLaVA_v1_6/: clip_encoder.py  dense_patch_labels.py  eval.py  llava_arch.py  main.py  sampling.py
efficient_uicoder/Qwen2_5_VL/: dense_patch_labels.py  eval.py  modeling_qwen2_5_vl.py  sampling.py
efficient_uicoder/UIED/: run_batch.py  run_single.py
efficient_uicoder/UIED/cnn/: CNN.py
efficient_uicoder/UIED/detect_compo/: ip_region_proposal.py
efficient_uicoder/UIED/detect_compo/deprecated/: block_division.py  ip_segment.py  ocr_classify_text.py
efficient_uicoder/UIED/detect_compo/lib_ip/: Component.py  ip_detection.py  (+2 more)
efficient_uicoder/UIED/detect_merge/: Element.py  merge.py
efficient_uicoder/UIED/detect_text/: Text.py  easy_ocr.py  ocr.py  text_detection.py
efficient_uicoder/UIED/result_processing/: Untitled.ipynb  eval_classes.py  eval_size.py  evaluation.py  experiment.py  view_gt.py
scripts/: run_eval_llava.sh  run_eval_qwen.sh
