[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "efficient-uicoder"
version = "0.1.0"
description = "EfficientUICoder: A Bidirectional Token Compression Framework for Efficient MLLM-based UI Code Generation"
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
include = ["efficient_uicoder*"]

[project.optional-dependencies]
extra = [
    "opencv-python",
    "easyocr",
    "numpy==1.24.4",
    "tinycss2",
    "protobuf",
    "pillow",
    "pandas",
    "matplotlib",
]
